--- a/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
+++ b/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
@@ -1,1 +1,43 @@
-<p>servico-prestado-form works!</p>
+<h1 class="mt-4">Serviço Prestado</h1>
+<ol class="breadcrumb mb-4">
+    <li class="breadcrum-bitem active">Novo</li>
+</ol>
+<div class="container">
+    <form #form="ngForm" (submit)="onSubmit()"></form>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label>Cliente: </label>
+                <select class="form-control" [(ngModel)]="servico.idCliente">
+                    <option value="">Selecione...</option>
+                    <option *ngFor="let cliente of clientes" [ngValue]="cliente.id">{{ cliente.nome}}</option>
+                </select>
+            </div>
+        </div>
+    </div>
+        <div class="row">
+            <div class="col-md-12">
+                <label>Descrição:</label>
+                <input class="form-control" [(ngModel)]="servico.descricao" type="text" name="descricao" id="inputDescricao">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <label>Data:</label>
+                <input class="form-control" [(ngModel)]="servico.data" type="text" name="data" id="inputData">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <label>Preço:</label>
+                <input class="form-control" [(ngModel)]="servico.preco" type="text" name="preco" id="inputPreco">
+            </div>
+        </div>
+    
+
+    <div class="row">
+        <div class="col-md-3">
+            <button class="btn btn-success" type="submit"> Salvar</button>
+        </div>
+    </div>
+</div>
